--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   ],
   "dependencies": {
     "@raycast/api": "^1.64.3",
-    "@raycast/utils": "^1.4.8"
+    "@raycast/utils": "^1.4.8",
+    "dotenv": "^16.3.1"
   },
   "devDependencies": {
     "@raycast/eslint-config": "^1.0.6",
